projeto - Mudando endereço

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                 <p><span id="contador" data-aos="fade-zoom-in" data-aos-delay="1000">...</span></p>
                 <h1>Para começar!</h1>
             </div>
-            <h3 class="bottom__container__text--place">Local: Rua Silvino Correia, Nº 33, Parque Atlântica, Ferraz de Vasconcelos - SP</h3>
+            <h3 class="bottom__container__text--place">Local: Rua SASS, Nº 01, Parque JavaScript, HTML City - SP</h3>
         </div>
     </section>
     <footer class="footer">
